--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 main.cc
 main.cpp
+latticetester.xcodeproj/
 latticetester.xcodeproj
-latticetester.xcodeproj/xcuserdata/paulwambergue.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+DerivedData/
+Results/
+results.txt
